--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ shapely = "==2.0.2"
 
 [tool.poetry.dev-dependencies]
 ruff = ">=0.2.1"
+pre-commit = ">=3.6.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
