--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "corona-kh4-app"
 version = "0.0.1"
-description = "An application to deploy an application focused on analyzing Corona KH-4 Analysis for a mountain range in East Tennessee."
+description = "An application focused on analyzing Corona KH-4 Analysis for a mountain range in East Tennessee."
 authors = ['cbraswe cbraswe <cbraswe@gmu.edu>']
 packages = [{include = "*", from="src"}]
 
