adding ruff formatting check in github actions

--- a/.github/workflows/check_python.yml
+++ b/.github/workflows/check_python.yml
@@ -6,4 +6,7 @@ jobs:
   clean-python:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: chartboost/ruff-action@v1
+        with:
+          src: "./src"
