--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,13 @@ shapely = "==2.0.2"
 [tool.poetry.dev-dependencies]
 ruff = ">=0.2.1"
 pre-commit = ">=3.6.1"
+mkdocs = ">=1.3.0"
+mkdocs-material = ">=8.3.6"
+mkdocstrings = ">=0.19.0"
+mkdocstrings-python = ">=0.7.1"
+mkdocs-gen-files = ">=0.5.0"
+mkdocs-literate-nav = ">=0.6.1"
+mkdocs-section-index = ">=0.3.8"
 
 [build-system]
 requires = ["poetry>=0.12"]
